--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,8 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+.navbar-link {
+  color: black;
 }
 
-a {
-  color: #00B7FF;
+.navbar-link:hover {
+  text-decoration: none;
+  color: black;
 }
