--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<div class="container">
+  <div class="d-flex justify-content-center">
+    <h2>Banking done the simple way</h2>
+  </div
+  <div class="row">
+    <div class="col-md-3 offset-md-5">
+      <a href="/signup" class="mt-3 btn btn-primary">
+        Invest Intelligently
+        <i class="far fa-eye"></i>
+      </a>
+    </div>
+  </div>
+</div>
