--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,17 +1,17 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6 offset-md-2">
-      <form method="post" action="/signup">
+    <div class="col-md-5 offset-md-4">
+      <form method="post" action="/login">
         <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" name="username" aria-describedby="emailHelp" placeholder="Enter email">
+          <label>Email address</label>
+          <input type="email" class="form-control" name="username" aria-describedby="emailHelp" placeholder="Enter email">
           <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" name="password" id="exampleInputPassword1" placeholder="Password">
+          <label>Password</label>
+          <input type="password" class="form-control" name="password" placeholder="Password">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Login</button>
       </form>
     </div>
   </div>
