--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-5 offset-md-4">
-      <form method="post" action="/signup">
+      <form method="post" action="/users/create">
         <div class="form-group">
           <label>Email address</label>
-          <input type="email" class="form-control" name="username" placeholder="Enter email">
+          <input type="email" class="form-control" name="email" placeholder="Enter email">
           <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
