--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,8 +4,8 @@
       <form method="post" action="/login">
         <div class="form-group">
           <label>Email address</label>
-          <input type="email" class="form-control" name="username" aria-describedby="emailHelp" placeholder="Enter email">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          <input type="email" class="form-control" name="username" placeholder="Enter email">
+          <small class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
           <label>Password</label>
