--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,13 @@
 <div class="container">
   <div class="row">
     <div class="col-md-5 offset-md-4">
+      <% if(typeof message !== 'undefined') { %>
+          <% if(message.length > 0) { %>
+          <div class="alert alert-danger">
+            <%= message %>
+          </div>
+          <% } %>
+      <% } %>
       <form method="post" action="/login">
         <div class="form-group">
           <label>Email address</label>
